# labdash

./: .gitignore  Makefile  compose.yaml  manage.py  pyproject.toml
labdash/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
static/css/: output.css
